--- a/style.css
+++ b/style.css
@@ -1,25 +1,27 @@
 body{
-    margin-right: 5%;
     font-size: 30px;
+    font-family: 'Futura PT Medium';
+    line-height: 35px;
 }
 .body{
     margin-left:  15%;
+    margin-right: 3%;
 }
 .name{
     font-size: 90px;
     padding-left: 23%;
 }
 p{
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding-top: 1.45%;
+    padding-bottom: 1.45%;
 }
 .p{
-    padding-bottom: 8%;
+    padding-bottom: 5%;
     padding-top: 5%;
 }
 .p2{
-    padding-top: 4%;
-    padding-bottom: 4%;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
 }
 .line{
     border-bottom: 1px solid rgb(128,128,128);
@@ -28,19 +30,18 @@ p{
 .copyright{
     font-size: 13px;
     color: rgb(128,128,128);
-    /* padding-left: 20%; */
 }
 .footer{
     position: relative;
     padding-top: 10%;
     padding-left: 5%;
+    padding-right: 5%;
 }
 a{
     color: rgb(128,128,128);
     text-decoration: none;
 }
 .war{
-    text-decoration: underline;
     font-weight: 500;
     font-size: 60px;
     padding-left: 25%;
